admission/validatingAdmissionPolicies/policies/apparmor-annotation-values/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-annotation-values-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 934375f3-3b04-5b5b-937c-24c962bb253b
  labels:
    apparmor-annotation-values.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    apparmor-annotation-values.security.kolteq.com/audit: 'false,true'
    apparmor-annotation-values.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-annotation-values
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: apparmor-annotation-values.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-annotation-values-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 934375f3-3b04-5b5b-937c-24c962bb253b
  labels:
    apparmor-annotation-values.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/warn: enabled
    apparmor-annotation-values.security.kolteq.com/audit: 'false,true'
    apparmor-annotation-values.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: apparmor-annotation-values
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: apparmor-annotation-values.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-annotation-values-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 934375f3-3b04-5b5b-937c-24c962bb253b
  labels:
    apparmor-annotation-values.security.kolteq.com/warn: 'false,true'
    apparmor-annotation-values.security.kolteq.com/audit: 'false,true'
    apparmor-annotation-values.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-annotation-values
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: apparmor-annotation-values.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-annotation-values-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 934375f3-3b04-5b5b-937c-24c962bb253b
  labels:
    apparmor-annotation-values.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    apparmor-annotation-values.security.kolteq.com/enforce: 'false,true'
    apparmor-annotation-values.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-annotation-values
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: apparmor-annotation-values.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-annotation-values-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 934375f3-3b04-5b5b-937c-24c962bb253b
  labels:
    apparmor-annotation-values.security.kolteq.com/audit: 'false,true'
    security.kolteq.com/audit: enabled
    apparmor-annotation-values.security.kolteq.com/enforce: 'false,true'
    apparmor-annotation-values.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-annotation-values
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: apparmor-annotation-values.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-annotation-values-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 934375f3-3b04-5b5b-937c-24c962bb253b
  labels:
    apparmor-annotation-values.security.kolteq.com/audit: 'false,true'
    apparmor-annotation-values.security.kolteq.com/enforce: 'false,true'
    apparmor-annotation-values.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-annotation-values
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: apparmor-annotation-values.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-annotation-values-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 934375f3-3b04-5b5b-937c-24c962bb253b
  labels:
    apparmor-annotation-values.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    apparmor-annotation-values.security.kolteq.com/audit: 'false,true'
    apparmor-annotation-values.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-annotation-values
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: apparmor-annotation-values.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-annotation-values-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 934375f3-3b04-5b5b-937c-24c962bb253b
  labels:
    apparmor-annotation-values.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/enforce: enabled
    apparmor-annotation-values.security.kolteq.com/audit: 'false,true'
    apparmor-annotation-values.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-annotation-values
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: apparmor-annotation-values.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: apparmor-annotation-values-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 934375f3-3b04-5b5b-937c-24c962bb253b
  labels:
    apparmor-annotation-values.security.kolteq.com/enforce: 'false,true'
    apparmor-annotation-values.security.kolteq.com/audit: 'false,true'
    apparmor-annotation-values.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: apparmor-annotation-values
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: apparmor-annotation-values.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
